--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatibe" content="ie=edge">
+    <meta http-equiv="X-UA-Compatibe" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-OOP</title>
-    <script src="./index.js"></script>
+    <script src="2.Prototypes/3.PropertyDescriptors.js"></script>
 </head>
 
 <body>
