Completed till Babel

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatibe" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-OOP</title>
-    <script src="2.Prototypes/3.PropertyDescriptors.js"></script>
+    <script type="module" src="5.ES6Modules/1.ModulesES6.js"></script>
 </head>
 
 <body>
